# rag-from-scratch

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  todo.txt
app/: chunker.py  config.py  embeddings.py  llm.py  retriever.py
config/: rag_settings.py
milvus/volumes/milvus/rdb_data/: 000011.sst  000017.sst  000034.sst  000048.sst  000054.sst  000075.sst  000081.sst  000087.sst  000102.sst  IDENTITY  LOG  LOG.old.1768805004278096  LOG.old.1768839878509147  LOG.old.1769012741118542  LOG.old.1769012780279108  LOG.old.1769012788435315  LOG.old.1769015427270895  LOG.old.1769067697852863  LOG.old.1769098214260452  LOG.old.1769239706911839  LOG.old.1769843673144537  LOG.old.1770050253300779  MANIFEST-000012  MANIFEST-000018  MANIFEST-000049  MANIFEST-000055  MANIFEST-000061  MANIFEST-000067  MANIFEST-000076  MANIFEST-000082  MANIFEST-000088  MANIFEST-000103
milvus/volumes/milvus/rdb_data_meta_kv/: 000009.sst  000015.sst  000032.sst  000046.sst  000052.sst  000058.sst  000069.sst  000073.sst  000079.sst  000085.sst  000096.sst  000100.sst  IDENTITY  LOG  LOG.old.1768805004095712  LOG.old.1768839878315703  LOG.old.1768926093984076  LOG.old.1769012740817519  LOG.old.1769012780178998  LOG.old.1769012788351614  LOG.old.1769015427075721  (+13 more)
rag_core/: rag_pipeline.py
rag_core/app/: chunker.py  download_model.py  embeddings.py  llm.py  loader.py  retriever.py
rag_core/src/: chunker.py  download_model.py  embeddings.py  llm.py  loader.py  reranker.py  retriever.py
rag_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
streamlit_app/: app.py
(+12 files in other folders)
