[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_from_scratch"
version = "0.1.0"
description = "RAG pipeline project"
dependencies = []
authors = [{name = "Ali Mehdy"}]
[tool.setuptools.packages.find]
where = ["."]
include = ["rag_core*", "config*"]